--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybersecurity Portfolio</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        h1 { color: #333; }
+        a { display: block; margin: 10px; text-decoration: none; color: blue; font-size: 18px; }
+    </style>
 </head>
 <body>
     <h1>Welcome to My Cybersecurity Portfolio</h1>
-    <p>Check out my projects:</p>
+    <p>Explore my projects and reports:</p>
+    
+    <a href="https://github.com/jmcoded0/Network-Incident-Analysis">🔍 Network Incident Analysis</a>
+    <a href="https://github.com/jmcoded0/SQL-query-activity">📊 SQL Query Analysis</a>
+    <a href="https://github.com/jmcoded0">🔗 Visit My GitHub</a>
 </body>
 </html>
