--- a/index.html
+++ b/index.html
@@ -5,17 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybersecurity Portfolio</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        h1 { color: #333; }
-        a { display: block; margin: 10px; text-decoration: none; color: blue; font-size: 18px; }
+        body { font-family: Arial, sans-serif; background: #121212; color: white; text-align: center; padding: 20px; }
+        .container { max-width: 800px; margin: auto; }
+        h1 { color: #00ffaa; }
+        .project { background: #1e1e1e; padding: 15px; margin: 10px; border-radius: 10px; }
+        a { color: #00ffaa; text-decoration: none; font-weight: bold; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Cybersecurity Portfolio</h1>
-    <p>Explore my projects and reports:</p>
-    
-    <a href="https://github.com/jmcoded0/Network-Incident-Analysis">🔍 Network Incident Analysis</a>
-    <a href="https://github.com/jmcoded0/SQL-query-activity">📊 SQL Query Analysis</a>
-    <a href="https://github.com/jmcoded0">🔗 Visit My GitHub</a>
+    <div class="container">
+        <h1>Cybersecurity Portfolio</h1>
+        <p>Welcome to my cybersecurity portfolio. Explore my projects and case studies below.</p>
+
+        <div class="project">
+            <h2>🔍 Network Incident Analysis</h2>
+            <p>Investigating an ICMP Flood DDoS attack with forensic techniques.</p>
+            <a href="https://github.com/jmcoded0/Network-Incident-Analysis" target="_blank">View Project</a>
+        </div>
+
+        <div class="project">
+            <h2>📊 SQL Query Analysis</h2>
+            <p>Using SQL queries to analyze and filter data effectively.</p>
+            <a href="https://github.com/jmcoded0/SQL-query-activity" target="_blank">View Project</a>
+        </div>
+
+        <div class="project">
+            <h2>🔗 Visit My GitHub</h2>
+            <p>Check out more of my cybersecurity work and contributions.</p>
+            <a href="https://github.com/jmcoded0" target="_blank">Go to GitHub</a>
+        </div>
+    </div>
 </body>
 </html>
