--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
             <ul>
                 <li><strong>Network Incident Analysis:</strong> <a href="https://github.com/jmcoded0/Network-Incident-Analysis/blob/main/Netork%20Incident%20%20Anaysis.pdf" target="_blank">View Report</a></li>
                 <li><strong>SQL Query Activity:</strong> <a href="https://github.com/jmcoded0/SQL-query-activity/blob/main/Apply%20filters%20to%20SQL%20queries.pdf" target="_blank">View Report</a></li>
+                <li><strong>Vulnerability Assessment Report:</strong> <a href="https://github.com/jmcoded0/Vulnerability-assessment-report/blob/main/Vulnerability%20assessment%20report.pdf" target="_blank">View Report</a></li>
+                <li><strong>Security Audit:</strong> <a href="https://github.com/jmcoded0/Security-Audit/blob/main/Controls%20and%20compliance%20checklist%20(My%20Security%20Audit).pdf" target="_blank">View Report</a></li>
             </ul>
         </div>
         
         <div class="section">
             <h2>Contact</h2>
-            <p>📧 Email: johnsonmatthewayobami@gmail.com</p>
+            <p>📧 Email: your.email@example.com</p>
             <p>🔗 <a href="https://github.com/jmcoded0" target="_blank">GitHub</a> | <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
         </div>
     </div>
