--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li><strong>SQL Query Activity:</strong> <a href="https://github.com/jmcoded0/SQL-query-activity/blob/main/Apply%20filters%20to%20SQL%20queries.pdf" target="_blank">View Report</a></li>
                 <li><strong>Vulnerability Assessment Report:</strong> <a href="https://github.com/jmcoded0/Vulnerability-assessment-report/blob/main/Vulnerability%20assessment%20report.pdf" target="_blank">View Report</a></li>
                 <li><strong>Security Audit:</strong> <a href="https://github.com/jmcoded0/Security-Audit/blob/main/Controls%20and%20compliance%20checklist%20(My%20Security%20Audit).pdf" target="_blank">View Report</a></li>
+                <li><strong>Incident Handler's Journal:</strong> <a href="https://github.com/jmcoded0/Incident-handler-journal/blob/main/Incident%20handler's%20journal.pdf" target="_blank">View Report</a></li>
             </ul>
         </div>
         
