--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         <div class="section">
             <h2>Contact</h2>
-            <p>📧 Email: your.email@example.com</p>
+            <p>📧 Email:johnsonmatthewayobami@gmail.com</p>
             <p>🔗 <a href="https://github.com/jmcoded0" target="_blank">GitHub</a> | <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
         </div>
     </div>
