--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hi, I'm Mathew</h1>
+        <h1>Hi, I'm Johnson Mathew</h1>
         <p>🚀 Passionate SOC Analyst dedicated to detecting, analyzing, and mitigating cyber threats. Experienced in security monitoring, vulnerability assessment, and cloud security. Certified in ISC2 CC, Google Cybersecurity, and Google Cloud Security. Always learning and evolving in the cybersecurity field.</p>
         
         <div class="section">
@@ -60,12 +60,13 @@
                 <li><strong>Vulnerability Assessment Report:</strong> <a href="https://github.com/jmcoded0/Vulnerability-assessment-report/blob/main/Vulnerability%20assessment%20report.pdf" target="_blank">View Report</a></li>
                 <li><strong>Security Audit:</strong> <a href="https://github.com/jmcoded0/Security-Audit/blob/main/Controls%20and%20compliance%20checklist%20(My%20Security%20Audit).pdf" target="_blank">View Report</a></li>
                 <li><strong>Incident Handler's Journal:</strong> <a href="https://github.com/jmcoded0/Incident-handler-journal/blob/main/Incident%20handler's%20journal.pdf" target="_blank">View Report</a></li>
+                <li><strong>Python Algorithm Report:</strong> <a href="https://github.com/jmcoded0/Python-algorithm/blob/main/Python%20Algorithm.pdf" target="_blank">View Report</a></li>
             </ul>
         </div>
         
         <div class="section">
             <h2>Contact</h2>
-            <p>📧 Email:johnsonmatthewayobami@gmail.com</p>
+            <p>📧 Email: johnsonmatthewayobami@gmail.com</p>
             <p>🔗 <a href="https://github.com/jmcoded0" target="_blank">GitHub</a> | <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
         </div>
     </div>
