--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mathew | Cybersecurity Portfolio</title>
     <style>
         body {
@@ -24,14 +25,4 @@
             margin-bottom: 30px;
             padding: 20px;
             background: #1e1e1e;
-            border-radius: 10px;
-        }
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>
+           
