--- a/index.html
+++ b/index.html
@@ -5,119 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mathew | Cybersecurity Portfolio</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #121212;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-        .container {
-            width: 80%;
-            max-width: 960px;
-            margin: 20px auto;
-            padding: 20px;
-            position: relative;
-        }
-        h1, h2, h3 {
-            color: #4CAF50; /* Green accent color */
-        }
-        .section {
-            margin-bottom: 30px;
-            padding: 20px;
-            background: #1e1e1e;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        a {
-            color: #4CAF50; /* Green accent color for links */
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        a:hover {
-            color: #45a049; /* Darker green on hover */
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-        strong {
-            color: #4CAF50; /* Green accent color for strong text */
-        }
-        .philosophy-top-right {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            width: 30%;
-            font-style: italic;
-            color: #a0a0a0;
-            text-align: right;
-        }
-        .container {
-          padding-top: 60px;
-      }
-        @media (max-width: 768px) {
-            .philosophy-top-right {
-                position: relative;
-                top: auto;
-                right: auto;
-                width: 100%;
-                text-align: center;
-                margin-top: 20px;
-            }
-            .container {
-                padding-top: 20px;
-            }
-        }
+        /* ... (Your existing body, container, heading, section, link, list, strong, philosophy styles) ... */
 
+        /* Improved Project Styles */
         .project-item {
-            margin-bottom: 20px;
+            margin-bottom: 10px; /* Reduced spacing */
         }
 
         .project-card {
             background-color: #1e1e1e;
             border-radius: 8px;
-            padding: 20px;
+            padding: 15px; /* Slightly reduced padding */
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s ease, box-shadow 0.2s ease;
             display: flex;
             flex-direction: column;
-            min-height: 200px; /* Minimum height for cards */
+            min-height: 150px; /* Minimum height for cards */
         }
 
-        .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-        }
+        .project-card:hover { /* ... (Your hover styles) ... */ }
+        .project-title { /* ... (Your title styles) ... */ }
+        .project-link { /* ... (Your link styles) ... */ }
+        @media (max-width: 768px) { /* ... (Your media query) ... */ }
 
-        .project-title {
-            font-weight: bold;
-            color: #e0e0e0;
-            margin-bottom: 10px;
-            flex-grow: 1;
-        }
-
-        .project-link {
-            display: inline-block;
-            padding: 8px 16px;
-            background-color: #4CAF50; /* Green for project links */
-            color: white;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-            margin-top: auto;
-        }
-
-        .project-link:hover {
-            background-color: #45a049; /* Darker green on hover */
-        }
-
-        @media (max-width: 768px) {
-            .project-card {
-                flex-direction: column;
-            }
-        }
     </style>
 </head>
 <body>
@@ -183,4 +93,32 @@
                 </li>
                 <li class="project-item">
                     <div class="project-card">
-                        <h3 class
+                        <h3 class="project-title">Security Audit</h3>
+                        <a class="project-link" href="https://github.com/jmcoded0/Security-Audit/blob/main/Controls%20and%20compliance%20checklist%20(My%20Security%20Audit).pdf" target="_blank">View Report</a>
+                    </div>
+                </li>
+                <li class="project-item">
+                    <div class="project-card">
+                        <h3 class="project-title">Incident Handler's Journal</h3>
+                        <a class="project-link" href="https://github.com/jmcoded0/Incident-handler-journal/blob/main/Incident%20handler's%20journal.pdf" target="_blank">View Report</a>
+                    </div>
+                </li>
+                <li class="project-item">
+                    <div class="project-card">
+                        <h3 class="project-title">Python Algorithm Report</h3>
+                        <a class="project-link" href="https://github.com/jmcoded0/Python-algorithm/blob/main/Python%20Algorithm.pdf" target="_blank">View Report</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Contact</h2>
+            <p>📧 Email: johnsonmatthewayobami@gmail.com</p>
+            <p>📞 Phone: +2349039909195</p>
+            <p>🔗 <a href="https://github.com/jmcoded0" target="_blank">GitHub</a> | <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></p>
+        </div>
+
+    </div>
+</body>
+</html>
